Publish latest changes